test/e2e/alcotest/passing/unicode_testname.ml
let () =
  Alcotest.run "suite-name"
    [
      ( "🔥",
        [
          Alcotest.test_case "Non ASCII unicode character" `Quick (fun () -> ());
        ] );
      ( "🔥a-b",
        [
          Alcotest.test_case "Non ASCII and ASCII characters" `Quick (fun () ->
              ());
        ] );
    ]
